--- a/index.html
+++ b/index.html
@@ -5,6 +5,5 @@
     <title>Rain/Shine. A Crowd-Sourced Weather App</title>
   </head>
   <body>
-
-  </body>
+Rain/Shine. A Crowd-Sourced Weather App  </body>
 </html>
